refactor(order): simplificar ClientController consolidando Client Services dentro de un solo ClientService